# gst-projectm

./: CMakeLists.txt  README.md  build.sh  plugin.c  projectm.c  projectm.h
